SpaceX - 3 and fix bugs
Showing satelite list data; add antd3 elements; add corresponding css and image;  fix bugs of not showing satellite data

--- a/spacex-vis/src/styles/SatelliteList.css
+++ b/spacex-vis/src/styles/SatelliteList.css
@@ -8,3 +8,16 @@
 .btn-container {
     text-align: center;
 }
+
+.sat-list {
+    height: 300px;
+    /*slider for the list*/
+    overflow: scroll;
+}
+
+.spin-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 335px;
+}
